syntax = "proto3";

package henkenclub.core;

import "google/protobuf/timestamp.proto";

import "content/type.proto";

service Henken {
  rpc GetHenken(GetHenkenRequest) returns (GetHenkenResponse);
  rpc FindHenken(FindHenkenRequest) returns (FindHenkenResponse);
  rpc CreateHenken(CreateHenkenRequest) returns (CreateHenkenResponse);
}

message HenkenEntity {
  message RealContent {
    string id = 1;
    henkenclub.content.ContentType type = 2;
  }
  message TempContent { string id = 1; }

  string id = 1;

  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;

  string from_user_id = 4;
  string to_user_id = 5;

  string comment = 6;

  optional string answer_id = 7;

  oneof content {
    RealContent real_content = 8;
    TempContent temp_content = 9;
  }
}

message GetHenkenRequest { string id = 1; }

message GetHenkenResponse { HenkenEntity henken = 2; }

message FindHenkenRequest {
  oneof query { string id = 1; }
}

message FindHenkenResponse { optional HenkenEntity henken = 2; }

message CreateHenkenRequest {
  string comment = 1;

  string from_user_id = 2;
  string to_user_id = 3;

  string content_id = 4;
}

message CreateHenkenResponse { HenkenEntity henken = 2; }
